BUGFIX: on small screens image overflow

--- a/css-flexbox-challenge-4/style.css
+++ b/css-flexbox-challenge-4/style.css
@@ -7,6 +7,11 @@
     padding: 0;
 }
 
+img {
+    max-width: 100%;
+    display: inline-block;
+}
+
 .container {
    max-width: 1000px;
    width: 80%;
